# Lite-HRNet-burn

./: .gitattributes  .gitignore  Cargo.toml  README.md  build.rs  mise.toml
assets/: material-symbols.css
assets/examples/: 0.avif  1.avif  10.avif  11.avif  12.avif  13.avif  14.avif  15.avif  16.avif  17.avif  18.avif  19.avif  2.avif  20.avif  21.avif  22.avif  23.avif  24.avif  25.avif  26.avif  27.avif  3.avif  4.avif  5.avif  6.avif  7.avif  8.avif  9.avif
assets/retrieval/: material-symbols.css
data/pose-obc/: .gitattributes
src/: cli.rs  data.rs  layers.rs  lib.rs  loss.rs  main.rs  model.rs  pose_estimation.rs  retrieval.rs  service.rs  spinepose_burn.rs  train.rs
src/cli/: args.rs  pose.rs  retrieval.rs
src/cli/args/: parse.rs  retrieval.rs  tests.rs
src/pose/: mod.rs
src/pose/lite_hrnet/: loss.rs  mod.rs  model.rs  train.rs
src/pose/lite_hrnet/data/: coco.rs  error.rs  heatmap.rs  mod.rs  sample.rs  spinepose.rs  transform.rs
src/pose/spinepose/: burn.rs  estimator.rs  mod.rs
src/retrieval/: cache.rs  dataset.rs  error.rs  features.rs  index.rs  io.rs  mod.rs  model.rs  train.rs
src/service/: assets.rs  http.rs  live.rs  search.rs  views.rs
tests/: data_training.rs  litehrnet.rs  reference_alignment.rs  retrieval.rs
tests/fixtures/: reference_outputs.json
