[package]
name = "pose-obc-retrieval"
version = "0.1.0"
edition = "2024"

[features]
default = ["flex"]
flex = ["ann/flex"]
metal = ["ann/metal", "ann/fusion", "flex"]

[dependencies]
ann = { package = "burn", version = "0.21.0", default-features = false, features = ["std", "train"] }
cli = { package = "clap", version = "4.5", features = ["derive"] }
image = { version = "0.25.10", default-features = false, features = ["jpeg", "png"] }
rand = "0.8.6"
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
json = { package = "simd-json", version = "0.17.0" }
hypertext = "0.12.1"
